# RAGLearning

./: .gitignore  GettingStarted.ipynb  SimpleAIApp.ipynb  SimpleLCELL.ipynb  hybrid-search.ipynb  requirements.txt  tools_and_agents.ipynb
1-Langchain/Data-Inngestion/: HTMLTextSplitters.ipynb  TextSplitter.ipynb  datainngestion.ipynb
1-Langchain/embedding/: embeddingopenai.ipynb
1-Langchain/searching/: Faiss.ipynb  chroma.ipynb
1.2-Ollama/: app.py
1.3-Langchain_basics/: SimpleLCELL.ipynb  serve.py
1.4-Langchain_Search_Engine/: app.py  main.py  pyproject.toml  requirements.txt
1.5-PDF_QUERY/: pdf_langchain.ipynb
1.6-NVIDIA-VIM_PROJECT/: finalapp.py  main.py  pyproject.toml  requirements.txt
chatbots/: Vectorretriever.ipynb  chatbot.ipynb  chatbotsq&a.ipynb
langchain-updated/: pyproject.toml
langchain-updated/updated-langchain/: 1-Langchain-intro.ipynb  tools.ipynb
projects/codellama/: main.py  modelfile  pyproject.toml
projects/conversational_qanda/: app.py
projects/end_to_end_chatbot/: .gitignore  app.py
projects/rag_document/: app.py
